renamed 'file' alias in countwords and added iBot to disable promotes

--- a/custom/CountWords.ini
+++ b/custom/CountWords.ini
@@ -73,9 +73,9 @@ n70=  if ($enabled_public) disable_public
 n71=  else enable_public
 n72=}
 n73=
-n74=alias file { return %data_dir $+ $table $+ .ini }
-n75=alias save { hsave -si $table  $file } 
-n76=alias load { hload -si $table $file }
+n74=alias get_file { return %data_dir $+ $table $+ .ini }
+n75=alias save { hsave -si $table $get_file } 
+n76=alias load { hload -si $table $get_file }
 n77=
 n78=alias get_timer { return $table $+ _timer }
 n79=
