--- a/custom/DisablePromote.ini
+++ b/custom/DisablePromote.ini
@@ -49,7 +49,7 @@ n46=**********************************
 n47=*/ 
 n48=
 n49=on ^*:notice:*:*: {
-n50=  if (($site == %bot_site) && ($enabled($chan))) {
+n50=  if (($site == %bot_site || $nick == iBot`) && ($enabled($chan))) {
 n51=    echo -ta Promote silenced: $1-
 n52=    halt
 n53=  }
