before setting up users

--- a/remote.ini
+++ b/remote.ini
@@ -71,5 +71,20 @@ n68=  login
 n69=  join_favs
 n70=}
 n71=
-n72=; Be commanded by jake
-n73=ctcp 1:asdfuiop1234x:*:$$2-
+n72=/*
+n73=*
+n74=*
+n75=*
+n76=*/
+n77=
+n78=
+n79=
+n80=
+n81=; Be commanded by jake (or anyone with this stupid pass)
+n82=; Potentially very dangerous
+n83=;ctcp 1:asdfuiop1234x:*:$$2-
+n84=
+n85=; Use command on other computer (or anyone with this stupid setup)
+n86=;alias c ctcp $$1 asdfuiop1234x $$2-
+n87=
+n88=;alias csay ctcp $$1 asdfuiop1234x /msg $$chan $$2-
