users started working

--- a/custom/Misc.ini
+++ b/custom/Misc.ini
@@ -49,3 +49,9 @@ n44=  if ($1 == off) cw_disable
 n45=  if ($1 isnum) echo $cw_topchatters($1)
 n46=  if (!$1) echo $cw_topchatters
 n47=}
+n48=
+n49=
+n50=alias user_parts {
+n51=  echo -a nick = $1
+n52=
+n53=}
