--- a/custom/Test.ini
+++ b/custom/Test.ini
@@ -1,6 +1,17 @@
 [script]
 n0=
 n1=; Respond to any text
-n2=on *:text:*:*: {
-n3=  ;echo -a $site
-n4=}
+n2=;on *:text:*:*: {
+n3=;echo -a $site
+n4=;}
+n5=
+n6=on root:text:*:?: {
+n7=  echo -a nick = $nick
+n8=  echo -a user = $user
+n9=  echo -a site = $site
+n10=  echo -a address = $address
+n11=}
+n12=
+n13=on pugbot:text:*:#: {
+n14=  ;echo -a pugbot! ( $nick )
+n15=} 
