--- a/users.ini
+++ b/users.ini
@@ -1,2 +1,10 @@
 [users]
-n0=dipshit:*@yourmama.user.globalgamers.net
+n0=/*
+n1=* Format: nick!address - Wildcards are accepted.
+n2=* address = nick@site
+n3=*/
+n4=
+n5=root:*@yourmama.user.globalgamers.net
+n6=pugbot:*@abot.user.globalgamers.net
+n7=pugbot:*@ibot.user.globalgamers.net
+n8=pugbot:*@X-LPs.bot
