--- a/custom/ColorWords.ini
+++ b/custom/ColorWords.ini
@@ -118,9 +118,10 @@ n115=*/
 n116=
 n117=menu channel {  
 n118=  -
-n119=  $iif($enabled, $style(1)) Color Words: toggle
-n120=  Add exclusion...: $add_exclusion($$?="Enter the color combination to exclude (foreground, background).")
-n121=  Exclusions
-n122=  . $submenu($get_exclusion($1)) 
-n123=  -
-n124=}
+n119=  Color Words (needs updated)
+n120=  .$iif($enabled, $style(1)) Enabled: toggle
+n121=  .Add exclusion...: $add_exclusion($$?="Enter the color combination to exclude (foreground, background).")
+n122=  .Exclusions
+n123=  .. $submenu($get_exclusion($1)) 
+n124=  -
+n125=}
