--- a/custom/CountWords.ini
+++ b/custom/CountWords.ini
@@ -152,13 +152,14 @@ n149=*/
 n150=
 n151=menu channel {  
 n152=  -
-n153=  $iif($enabled, $style(1)) Count Words: toggle
-n154=  $iif($enabled_public, $style(1)) Respond to .chatters: toggle_public
-n155=  Show all: echo $get_list
-n156=  Show top X ...: $get_list($?="Show how many?")
-n157=  -
-n158=}
-n159=
+n153=  Count Words (needs updated)
+n154=  .$iif($enabled, $style(1)) Enabled: toggle
+n155=  .$iif($enabled_public, $style(1)) Respond to .chatters: toggle_public
+n156=  .Show all: echo $get_list
+n157=  .Show top ...: $get_list($?="Show how many?")
+n158=  -
+n159=}
 n160=
-n161=:error
-n162=echo $error
+n161=
+n162=:error
+n163=echo $error
