--- a/custom/DisablePromote.ini
+++ b/custom/DisablePromote.ini
@@ -4,18 +4,18 @@ n1=*********************************************************************
 n2=*
 n3=* Purpose: Restrict which channels cause beeps when promoted on.
 n4=*
-n5=*********************************************************************
-n6=*/
-n7=
-n8=/*
-n9=**********************************
-n10=* Aliases
-n11=**********************************
-n12=*/ 
-n13=
-n14=/** 
-n15=* Manditory alias for each script module.
-n16=*/
+n5=* Dependencies:
+n6=* PugBots.ini
+n7=*
+n8=*********************************************************************
+n9=*/
+n10=
+n11=/*
+n12=**********************************
+n13=* Aliases
+n14=**********************************
+n15=*/ 
+n16=
 n17=alias tag return DisablePromote
 n18=
 n19=alias get_var {
@@ -24,15 +24,15 @@ n21=}
 n22=
 n23=
 n24=alias enabled {
-n25=  if (% [ $+ [ $get_var($1) ] ] == true) return $true
+n25=  if (% [ $+ [ $get_var($1) ] ] == $true) return $true
 n26=}
 n27=
 n28=alias enable {
-n29=  % [ $+ [ $get_var($1) ] ] = true
+n29=  % [ $+ [ $get_var($1) ] ] = $true
 n30=}
 n31=
 n32=alias disable {
-n33=  % [ $+ [ $get_var($1) ] ] = false
+n33=  unset % [ $+ [ $get_var($1) ] ]
 n34=}
 n35=
 n36=alias toggle {
@@ -48,8 +48,8 @@ n45=* Events
 n46=**********************************
 n47=*/ 
 n48=
-n49=on ^*:notice:*:*: {
-n50=  if (($site == %bot_site || $site == %bot2_site) && ($enabled($chan))) {
+n49=on ^*:notice:*:#: {
+n50=  if ($site == $get_pugbot()) {
 n51=    echo -ta Promote silenced: $1-
 n52=    halt
 n53=  }
