--- a/users.ini
+++ b/users.ini
@@ -1,10 +1,17 @@
 [users]
-n0=/*
-n1=* Format: nick!address - Wildcards are accepted.
-n2=* address = nick@site
-n3=*/
-n4=
-n5=root:*@yourmama.user.globalgamers.net
-n6=pugbot:*@abot.user.globalgamers.net
-n7=pugbot:*@ibot.user.globalgamers.net
-n8=pugbot:*@X-LPs.bot
+n0=/**
+n1=* Users.ini
+n2=*
+n3=* Keep a list of users and their level. 
+n4=* Only the _highest_ level event will be triggered.
+n5=* Named levels will only respond to an event with that name.
+n6=* 
+n7=* Format: nick!address - Wildcards are accepted.
+n8=* address = nick@site
+n9=*/
+n10=
+n11=; Admin
+n12=400:*@yourmama.user.globalgamers.net
+n13=
+n14=; Root
+n15=500:*@jeppy.user.globalgamers.net
