--- a/custom/AutoCaptain.ini
+++ b/custom/AutoCaptain.ini
@@ -17,72 +17,69 @@ n14=* Aliases
 n15=**********************************
 n16=*/ 
 n17=
-n18=/** 
-n19=* Manditory alias for each script module.
-n20=*/
-n21=alias tag return AutoCaptain
-n22=
-n23=alias get_var {  
-n24=  if ($1 && $2) {
-n25=    var %chan = $1
-n26=    var %team = $2    
-n27=    return $tag $+ _ $+ [ %chan ] $+ _ $+ [ %team ]
-n28=  }
-n29=  else return $1   
-n30=}
-n31=
-n32=alias enabled {
-n33=  if ( % [ $+ [ $get_var($1, $2) ] ] == true) return $true
-n34=  else return $false
+n18=
+n19=alias get_var {  
+n20=  if ($1 && $2) {
+n21=    var %chan = $1
+n22=    var %team = $2    
+n23=    return $tag $+ _ $+ [ %chan ] $+ _ $+ [ %team ]
+n24=  }
+n25=  else return $1   
+n26=}
+n27=
+n28=alias enabled {
+n29=  if ( % [ $+ [ $get_var($1, $2) ] ] == true) return $true
+n30=  else return $false
+n31=}
+n32=
+n33=alias enable {
+n34=  % [ $+ [ $get_var($1, $2) ] ] = true
 n35=}
 n36=
-n37=alias enable {
-n38=  % [ $+ [ $get_var($1, $2) ] ] = true
+n37=alias disable {
+n38=  % [ $+ [ $get_var($1, $2) ] ] = false
 n39=}
 n40=
-n41=alias disable {
-n42=  % [ $+ [ $get_var($1, $2) ] ] = false
-n43=}
-n44=
-n45=alias toggle {
-n46=  var %global_var = $get_var($1, $2)
-n47=  if ($enabled(%global_var)) disable %global_var
-n48=  else enable %global_var
-n49=}
-n50=
-n51=/*
-n52=**********************************
-n53=* Events
-n54=**********************************
-n55=*/ 
-n56=
-n57=on 1:text:*pug has been filled*:#: {
-n58=  echo -s $site
-n59=  if (($site == %bot_site) && ($enabled($chan, red))) { 
-n60=    msg $chan .captain
-n61=    disable $chan red
-n62=  }
-n63=}
-n64=
-n65=
-n66=on 1:text:*is captain of:#: {
-n67=  if (($site == %bot_site) && ($enabled($chan, blue))) { 
-n68=    msg $chan .captain
-n69=    disable $chan blue
-n70=  }
-n71=}
-n72=
-n73=
-n74=
-n75=/*
-n76=**********************************
-n77=* Menus
-n78=**********************************
-n79=*/ 
-n80=
-n81=menu channel {
-n82=  -   
-n83=  $iif($enabled($chan, red), $style(1)) Auto captain red: toggle $chan red 
-n84=  $iif($enabled($chan, blue), $style(1)) Auto captain blue: toggle $chan blue
-n85=  -
-n86=}
+n41=alias toggle {
+n42=  var %global_var = $get_var($1, $2)
+n43=  if ($enabled(%global_var)) disable %global_var
+n44=  else enable %global_var
+n45=}
+n46=
+n47=/*
+n48=**********************************
+n49=* Events
+n50=**********************************
+n51=*/ 
+n52=
+n53=on 1:text:*pug has been filled*:#: {
+n54=  echo -s $site
+n55=  if (($site == %bot_site) && ($enabled($chan, red))) { 
+n56=    msg $chan .captain
+n57=    disable $chan red
+n58=  }
+n59=}
+n60=
+n61=
+n62=on 1:text:*is captain of:#: {
+n63=  if (($site == %bot_site) && ($enabled($chan, blue))) { 
+n64=    msg $chan .captain
+n65=    disable $chan blue
+n66=  }
+n67=}
+n68=
+n69=
+n70=
+n71=/*
+n72=**********************************
+n73=* Menus
+n74=**********************************
+n75=*/ 
+n76=
+n77=menu channel {
+n78=  -   
+n79=  $style(2) Auto captain (Abot only) (broken)
+n80=  .$iif($enabled($chan, red), $style(1)) Auto captain red: toggle $chan red 
+n81=  .$iif($enabled($chan, blue), $style(1)) Auto captain blue: toggle $chan blue
+n82=  -
+n83=}
