--- a/custom/Misc.ini
+++ b/custom/Misc.ini
@@ -1,57 +1,52 @@
 ;c echo $cw_TopChatters($1)
 
 [script]
-n0=/** 
-n1=* Manditory alias for each script module.
+n0=/**
+n1=* This is neat-o
 n2=*/
-n3=alias tag return Misc
-n4=
-n5=alias j {
-n6=  msg %bot_nick .join $chan
-n7=  msg $chan .promote
-n8=}
-n9=
-n10=alias l msg %bot_nick .leaveall
-n11=
-n12=/**
-n13=* Nick message - temporarily change your nick to communicate with the channel
-n14=*/
-n15=alias nm {
-n16=
-n17=  var %new_nick = $1
-n18=  var %delay = $2
-n19=  if (!%delay) %delay = 1
-n20=  %current_nick = $me
-n21=  nick %new_nick
-n22=  timer 1 %delay $&
-n23=    nick %current_nick | $&
-n24=    unset %current_nick
-n25=}
+n3=alias expand_vars {
+n4=  tokenize 32 $$1-
+n5=  var %i = 1
+n6=  var %word
+n7=  var %char
+n8=  var %result
+n9=  while (%i <= $0) {    
+n10=    %word =  $ [ $+ [ %i ] ]
+n11=    %char = $left(%word, 1)
+n12=    if (%char == $chr(36) || %char == $chr(37)) {
+n13=      %word = [ [ %word ] ]
+n14=    }
+n15=    %result = %result $+ $chr(32) $+ %word
+n16=    inc %i
+n17=  }
+n18=  return %result
+n19=}
+n20=
+n21=
+n22=/**
+n23=* Nick message - temporarily change your nick to communicate with the channel
+n24=*/
+n25=alias nm {
 n26=
-n27=
-n28=
-n29=alias make_global_name {
-n30=  var %i = 1
-n31=  var %result
-n32=  while (%i <= $0) { 
-n33=    if (%i > 1) {
-n34=      %result = %result $+ _
-n35=    }
-n36=    %result = %result $+ [ $ $+ [ %i ] ] ]
-n37=    inc %i
-n38=  }
-n39=  return %result
-n40=}
-n41=
-n42=alias words {
-n43=  if ($1 == on) cw_enable
-n44=  if ($1 == off) cw_disable
-n45=  if ($1 isnum) echo $cw_topchatters($1)
-n46=  if (!$1) echo $cw_topchatters
-n47=}
-n48=
-n49=
-n50=alias user_parts {
-n51=  echo -a nick = $1
-n52=
-n53=}
+n27=  var %new_nick = $1
+n28=  var %delay = $2
+n29=  if (!%delay) %delay = 1
+n30=  %current_nick = $me
+n31=  nick %new_nick
+n32=  timer 1 %delay $&
+n33=    nick %current_nick | $&
+n34=    unset %current_nick
+n35=}
+n36=
+n37=alias words {
+n38=  if ($1 == on) cw_enable
+n39=  if ($1 == off) cw_disable
+n40=  if ($1 isnum) echo $cw_topchatters($1)
+n41=  if (!$1) echo $cw_topchatters
+n42=}
+n43=
+n44=
+n45=alias user_parts {
+n46=  echo -a nick = $1
+n47=
+n48=}
