--- a/custom/Test.ini
+++ b/custom/Test.ini
@@ -1,17 +1,14 @@
 [script]
 n0=
 n1=; Respond to any text
-n2=;on *:text:*:*: {
-n3=;echo -a $site
-n4=;}
+n2=on *:text:*:*: {
+n3=  ;show_event_user_info
+n4=}
 n5=
-n6=on root:text:*:?: {
-n7=  echo -a nick = $nick
-n8=  echo -a user = $user
-n9=  echo -a site = $site
-n10=  echo -a address = $address
-n11=}
-n12=
-n13=on pugbot:text:*:#: {
-n14=  ;echo -a pugbot! ( $nick )
-n15=} 
+n6=on 500:text:*:?: {
+n7=
+n8=}
+n9=
+n10=on pugbot:text:*:#: {
+n11=  ;echo -a pugbot! ( $nick )
+n12=} 
