added auto-connect status popup and a scriptloader.ini to load all the scripts in that dir

--- a/custom/CountWords.ini
+++ b/custom/CountWords.ini
@@ -75,7 +75,7 @@ n72=}
 n73=
 n74=alias get_file { return %data_dir $+ $table $+ .ini }
 n75=alias save { hsave -si $table $get_file } 
-n76=alias load { hload -si $table $get_file }
+n76=;alias load { hload -si $table $get_file }
 n77=
 n78=alias get_timer { return $table $+ _timer }
 n79=
@@ -114,7 +114,7 @@ n111=
 n112=  return $separator1 $chan Top %count Chatters $separator2 %body $separator4
 n113=}
 n114=
-n115=
+n115=/********************************************
 n116=;
 n117=; Events
 n118=;
@@ -144,7 +144,7 @@ n141=    save
 n142=    timer $+ $get_timer off
 n143=  }
 n144=}
-n145=
+n145=*******************************************************/
 n146=
 n147=/*
 n148=* Menus
