--- a/custom/Start.ini
+++ b/custom/Start.ini
@@ -5,13 +5,86 @@ n2=*
 n3=* Handle mIRC startup process.
 n4=*/
 n5=
-n6=
-n7=/*
-n8=* Events 
-n9=*/
-n10=
-n11=on 1:start: {
-n12=  ; Join server(s)
-n13=  server irc.globalgamers.net
-n14=
+n6=/**
+n7=* Aliases
+n8=*/
+n9=
+n10=; <index> [address]
+n11=alias set_auto_connect {
+n12=  if ($1 == $null) return
+n13=  if ($2 != $null) %auto_connect_ [ $+ [ $1 ] ] = $2
+n14=  else unset %auto_connect_ [ $+ [ $1 ] ]
 n15=}
+n16=
+n17=; <address>
+n18=alias toggle_auto_connect {
+n19=  var %id = $get_auto_connect_id($$1)
+n20=  if (%id == $null) $add_auto_connects($$1)
+n21=  else $set_auto_connect(%id)
+n22=}
+n23=
+n24=; <index>
+n25=alias get_auto_connect {
+n26=  return %auto_connect_ [ $+ [ $$1 ] ]
+n27=}
+n28=
+n29=
+n30=alias make_auto_connect {
+n31=  var %count = $pos($server, ., 0)
+n32=  var %pos = $pos($server, ., $calc(%count - 1))
+n33=  return irc. $+ $mid($server, $calc(%pos + 1))
+n34=}
+n35=
+n36=; <address>
+n37=alias get_auto_connect_id {
+n38=  var %i = 0
+n39=  while ((%i < 100) && ($get_auto_connect(%i) != $$1)) inc %i
+n40=  if (%i == 100) return
+n41=  return %i
+n42=}
+n43=
+n44=
+n45=; <address> ...
+n46=alias add_auto_connects {
+n47=  var %i = 0
+n48=  var %j = 1
+n49=  while ((%j <= $0) && (%i < 100)) {
+n50=    if ($get_auto_connect(%i) == $null) {
+n51=      $set_auto_connect(%i, $ [ $+ [ %j ] ] )
+n52=      inc %j
+n53=    }
+n54=    inc %i
+n55=  }
+n56=}
+n57=
+n58=/*
+n59=* Events 
+n60=*/
+n61=
+n62=on 1:start: {
+n63=  var %i = 0
+n64=  var %address
+n65=  var %first = $true
+n66=  while (%i < 100) {
+n67=    %address = $get_auto_connect(%i) 
+n68=    if (%address != $null) {
+n69=      if (%first == $true) {
+n70=        server %address
+n71=        %first = $false
+n72=      }
+n73=      else server -m %address
+n74=    }
+n75=    inc %i
+n76=  }
+n77=}
+n78=
+n79=
+n80=/**
+n81=* Menus
+n82=*/
+n83=
+n84=menu status {
+n85=  -
+n86=  $iif($get_auto_connect_id($make_auto_connect()) !=  $null, $style(1)) Connect on Start: $toggle_auto_connect($make_auto_connect())
+n87=  -
+n88=}
