bugfix, ignoring users.ini

--- a/custom/ScriptLoader.ini
+++ b/custom/ScriptLoader.ini
@@ -3,8 +3,8 @@ n0=on *:load: {
 n1=  var %i = 1
 n2=  var %file = $findfile($scriptdir, *.ini, %i, 1)
 n3=  while (%file != $null) {
-n4=    if (%file != $script) load -rs %file
+n4=    if (%file != $script) load -rs $qt(%file)
 n5=    inc %i
-n6=    %file = $findfile($scriptdir, *.ini, %i, 1)    
+n6=    %file = $findfile($scriptdir, *.ini, %i, 1)
 n7=  }
 n8=}
