added mimic - not working yet\ \

--- a/PugBots.ini
+++ b/PugBots.ini
@@ -16,40 +16,44 @@ n13=/*
 n14=* Aliases
 n15=*/
 n16=
-n17=/** 
-n18=* Sets the PUG bot for a channel 
-n19=*/
-n20=alias set_pugbot {
-n21=  var %chan = $chan
-n22=  if (%chan == $null) %chan = $2
-n23=  if (%chan == $null) return
-n24=  if ($1 == $null) unset %pugbot_ [ $+ [ %chan ] ]
-n25=  else %pugbot_ [ $+ [ %chan ] ] = $get_site($1)
-n26=}
-n27=
-n28=alias get_pugbot {
-n29=  var %chan = $chan
-n30=  if (%chan == $null) %chan = $1
-n31=  if (%chan == $null) return
-n32=  return % [ $+ pugbot $+ _ $+ [ %chan ] ]
-n33=}
-n34=
-n35=alias is_pugbot {
-n36=  if ($get_site($$1) == $get_pugbot($2)) return $true
-n37=  return $false
-n38=}
-n39=
-n40=alias toggle_pugbot {
-n41=  if ($is_pugbot($1)) $set_pugbot($null, $2)
-n42=  else $set_pugbot($1, $2)
-n43=}
-n44=
-n45=/* 
-n46=* Menus
-n47=*/ 
+n17=alias get_pugbot_nick {
+n18=  return $ial(*@ $+ $get_pugbot).nick 
+n19=}
+n20=
+n21=/** 
+n22=* Sets the PUG bot for a channel 
+n23=*/
+n24=alias set_pugbot {
+n25=  var %chan = $chan
+n26=  if (%chan == $null) %chan = $2
+n27=  if (%chan == $null) return
+n28=  if ($1 == $null) unset %pugbot_ [ $+ [ %chan ] ]
+n29=  else %pugbot_ [ $+ [ %chan ] ] = $get_site($1)
+n30=}
+n31=
+n32=alias get_pugbot {
+n33=  var %chan = $chan
+n34=  if (%chan == $null) %chan = $1
+n35=  if (%chan == $null) return
+n36=  return % [ $+ pugbot $+ _ $+ [ %chan ] ]
+n37=}
+n38=
+n39=alias is_pugbot {
+n40=  if ($get_site($$1) == $get_pugbot($2)) return $true
+n41=  return $false
+n42=}
+n43=
+n44=alias toggle_pugbot {
+n45=  if ($is_pugbot($1)) $set_pugbot($null, $2)
+n46=  else $set_pugbot($1, $2)
+n47=}
 n48=
-n49=menu nicklist {
-n50=  -
-n51=  $iif($is_pugbot($$1), $style(1)) PUG Bot: $toggle_pugbot($$1)
-n52=  -
-n53=}
+n49=/* 
+n50=* Menus
+n51=*/ 
+n52=
+n53=menu nicklist {
+n54=  -
+n55=  $iif($is_pugbot($$1), $style(1)) PUG Bot: $toggle_pugbot($$1)
+n56=  -
+n57=}
