--- a/Start.ini
+++ b/Start.ini
@@ -30,61 +30,64 @@ n27=}
 n28=
 n29=
 n30=alias make_auto_connect {
-n31=  var %count = $pos($server, ., 0)
-n32=  var %pos = $pos($server, ., $calc(%count - 1))
-n33=  return irc. $+ $mid($server, $calc(%pos + 1))
-n34=}
-n35=
-n36=; <address>
-n37=alias get_auto_connect_id {
-n38=  var %i = 0
-n39=  while ((%i < 100) && ($get_auto_connect(%i) != $$1)) inc %i
-n40=  if (%i == 100) return
-n41=  return %i
-n42=}
-n43=
-n44=
-n45=; <address> ...
-n46=alias add_auto_connects {
-n47=  var %i = 0
-n48=  var %j = 1
-n49=  while ((%j <= $0) && (%i < 100)) {
-n50=    if ($get_auto_connect(%i) == $null) {
-n51=      $set_auto_connect(%i, $ [ $+ [ %j ] ] )
-n52=      inc %j
-n53=    }
-n54=    inc %i
-n55=  }
-n56=}
-n57=
-n58=/*
-n59=* Events 
-n60=*/
-n61=
-n62=on 1:start: {
-n63=  var %i = 0
-n64=  var %address
-n65=  var %first = $true
-n66=  while (%i < 100) {
-n67=    %address = $get_auto_connect(%i) 
-n68=    if (%address != $null) {
-n69=      if (%first == $true) {
-n70=        server %address
-n71=        %first = $false
-n72=      }
-n73=      else server -m %address
-n74=    }
-n75=    inc %i
-n76=  }
-n77=}
-n78=
-n79=
-n80=/**
-n81=* Menus
-n82=*/
-n83=
-n84=menu status {
-n85=  -
-n86=  $iif($get_auto_connect_id($make_auto_connect()) !=  $null, $style(1)) Connect on Start: $toggle_auto_connect($make_auto_connect())
-n87=  -
-n88=}
+n31=  return irc. $+ $network $+ .net
+n32=  /* 
+n33=  var %count = $pos($server, ., 0)
+n34=  var %pos = $pos($server, ., $calc(%count - 1))
+n35=  return irc. $+ $mid($server, $calc(%pos + 1))
+n36=  */
+n37=}
+n38=
+n39=; <address>
+n40=alias get_auto_connect_id {
+n41=  var %i = 0
+n42=  while ((%i < 100) && ($get_auto_connect(%i) != $$1)) inc %i
+n43=  if (%i == 100) return
+n44=  return %i
+n45=}
+n46=
+n47=
+n48=; <address> ...
+n49=alias add_auto_connects {
+n50=  var %i = 0
+n51=  var %j = 1
+n52=  while ((%j <= $0) && (%i < 100)) {
+n53=    if ($get_auto_connect(%i) == $null) {
+n54=      $set_auto_connect(%i, $ [ $+ [ %j ] ] )
+n55=      inc %j
+n56=    }
+n57=    inc %i
+n58=  }
+n59=}
+n60=
+n61=/*
+n62=* Events 
+n63=*/
+n64=
+n65=on 1:start: {
+n66=  var %i = 0
+n67=  var %address
+n68=  var %first = $true
+n69=  while (%i < 100) {
+n70=    %address = $get_auto_connect(%i) 
+n71=    if (%address != $null) {
+n72=      if (%first == $true) {
+n73=        server %address
+n74=        %first = $false
+n75=      }
+n76=      else server -m %address
+n77=    }
+n78=    inc %i
+n79=  }
+n80=}
+n81=
+n82=
+n83=/**
+n84=* Menus
+n85=*/
+n86=
+n87=menu status {
+n88=  -
+n89=  $iif($get_auto_connect_id($make_auto_connect()) !=  $null, $style(1)) Connect on Start: $toggle_auto_connect($make_auto_connect())
+n90=  -
+n91=}
