--- a/AutoCaptain.ini
+++ b/AutoCaptain.ini
@@ -51,7 +51,7 @@ n48=*/
 n49=
 n50=on 1:text:*pug has been filled*:#: {
 n51=  echo -s $site
-n52=  if (($site == %bot_site) && ($enabled($chan, red))) { 
+n52=  if (($site == %pugbot_ [ $+ [ $chan ] ] ) && ($enabled($chan, red))) { 
 n53=    msg $chan .captain
 n54=    disable $chan red
 n55=  }
@@ -59,7 +59,7 @@ n56=}
 n57=
 n58=
 n59=on 1:text:*is captain of:#: {
-n60=  if (($site == %bot_site) && ($enabled($chan, blue))) { 
+n60=  if (($site == %pugbot_ [ $+ [ $chan ] ] ) && ($enabled($chan, blue))) { 
 n61=    msg $chan .captain
 n62=    disable $chan blue
 n63=  }
@@ -75,7 +75,7 @@ n72=*/
 n73=
 n74=menu channel {
 n75=  -   
-n76=  $style(2) Auto captain (Abot only) (broken)
+n76=  Auto captain (Abot only)  
 n77=  .$iif($enabled($chan, red), $style(1)) Auto captain red: toggle $chan red 
 n78=  .$iif($enabled($chan, blue), $style(1)) Auto captain blue: toggle $chan blue
 n79=  -
