minor fix in autocaptain (for blue)

--- a/AutoCaptain.ini
+++ b/AutoCaptain.ini
@@ -58,7 +58,7 @@ n55=  }
 n56=}
 n57=
 n58=
-n59=on 1:text:*is captain of:#: {
+n59=on 1:text:*is now captain of *:#: {
 n60=  if (($site == %pugbot_ [ $+ [ $chan ] ] ) && ($enabled($chan, blue))) { 
 n61=    msg $chan .captain
 n62=    disable $chan blue
